# pkgmgnt

./: .gitignore  README.md  RELEASE.md  pyproject.toml  setup.cfg
design/mermaid/: use-cases.md
pkgmgr/: __init__.py  cli.py  config.py  release.py  snapshot.py  watch.py
pkgmgr.egg-info/: PKG-INFO  SOURCES.txt
pkgmgr/templates/: pkg.yaml.sample  pkgmgr.yaml.sample
pkgmgr_kunrunic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
plugin/: export_cksum.py  export_pkgstore.py
tests/: test_release.py
