[metadata]
name = pkgmgr
version = 0.1.0.dev0
description = Package management workflow scaffold (Python 2.6+ compatible)
long_description = file: README.md
long_description_content_type = text/markdown
author = pkgmgr maintainers
license = MIT
url = https://example.com/pkgmgr
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Topic :: Software Development :: Build Tools

[options]
packages = find:
python_requires = >=2.6
include_package_data = False
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    pkgmgr = pkgmgr.cli:main
